nodejs-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
   name: node-app
spec:
   
  replicas: 2
  selector:
    matchLabels:
      app: node

  template:
     metadata:
        name: node_app
        labels:
           app: node
     spec:
         
          imagePullSecrets:
            - name: ecr-login

          containers:
            - name: node-app
              #              image: amirmamdouh123/nodeapp
              image: 242201301329.dkr.ecr.us-east-1.amazonaws.com/node-app
              imagePullPolicy: Always  # Ensures the latest image is pulled
 
              ports:
               - containerPort: 3000
                 protocol: TCP 
              
              startupProbe:
                httpGet:
                  port: 3000
                  path: /
                 
                initialDelaySeconds: 10
                timeoutSeconds: 3
                failureThreshold: 3     
               
              readinessProbe:

                httpGet:
                  port: 3000
                  path: /
                initialDelaySeconds: 5
                timeoutSeconds: 5
                failureThreshold: 3

              livenessProbe:
                httpGet:
                  port: 3000
                  path: /
                initialDelaySeconds: 5    
                timeoutSeconds: 5
                failureThreshold: 3
                     
              resources:
                requests:
                  cpu: "100m"
                  memory: "128Mi"
                limits:
                  cpu: "200m"
                  memory: "256Mi"
