nodejs_clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: node-clusterip
spec:
  type: ClusterIP
  selector:
    app: node-app
  ports:
    - port: 3000
      targetPort: 3000
