ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
  annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /

spec:
   ingressClassName: nginx
   rules:
#     - host: www.node.com
     - http:
         paths:
          - path: /api/hello
            pathType: Prefix
            backend:
              service:
                name: node-clusterip
                port:
                  number: 3000
